fix: remove getElementById and add overflow for dropdown with options

--- a/packages/shared/styles/components/molecules/SfSelect.scss
+++ b/packages/shared/styles/components/molecules/SfSelect.scss
@@ -29,7 +29,7 @@
   width: var(--select-width);
   height: var(--select-height);
   padding: var(--select-padding, 0 0 calc(var(--font-xs) * 1.2) 0);
-  color: var(--select-color, var(--c-text));  
+  color: var(--select-color, var(--c-text));
   cursor: default;
   &__label {
     position: absolute;
@@ -106,9 +106,7 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    @include for-mobile {
-      overflow: auto;
-    }
+    overflow: auto;
     &::-webkit-scrollbar {
       width: 0;
     }
